# onenote-mcp-server-sharepoint-compatible

./: CHANGELOG.md  README.md  onenote_mcp_server.py  pyproject.toml
